criado a pagina about e responsividade funcionando

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <header class="navbar">
       <h2 class="navbar-title">Victor Alves</h2>
-      <div class="menu-active" id="">
+      <div class="menu-active">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="100%"
@@ -41,13 +41,12 @@
         </svg>
       </div>
 
-      <nav class="navbar-navigation">
-        <a href="#" class="navigation-link active">Home</a>
-        <a href="#" class="navigation-link">About</a>
-        <a href="#" class="navigation-link">Soft Skills</a>
-        <a href="#" class="navigation-link">Hard Skills</a>
-        <a href="#" class="navigation-link">Project</a>
-        <a href="#" class="navigation-link">Contact</a>
+      <nav class="navbar-navigation response-active"">
+        <a href="./index.html" class="navigation-link active">Home</a>
+        <a href="./pages/about/about.html" class="navigation-link">About</a>
+        <a href="./pages/skills/skills.html" class="navigation-link">Skills</a>
+        <a href="./pages/project/project.html" class="navigation-link">Project</a>
+        <a href="./pages/contact/contact.html" class="navigation-link">Contact</a>
       </nav>
     </header>
     <section class="home">
