criada a pagina de contato mudado o botão da home e adicionado o pdf do vc

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           amigos.Viciado em café e apaixonado pelo meu pais nordeste.
         </p>
 
-        <a href="#" class="buttom">Contrate-Me</a>
+        <a href="./pdf/VICTOR-ALVES-CV.pdf" class="buttom" download="">Download CV</a>
       </div>
     </section>
   </body>
