resolvidos alguns bugs e erros de digitação

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -80,7 +80,7 @@
         </p>
         <p>
           Por último, mas não menos importante, sou um orgulhoso pai de
-          estimação. Meu amigo peludo é uma grande parte da minha vida e adoro
+          Pet. Meu amigo peludo é uma grande parte da minha vida e adoro
           cuidar deles e passar o tempo juntos. Não há nada como o amor
           incondicional e o companheirismo que um animal de estimação pode
           oferecer.
