--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -102,14 +102,9 @@
       <div class="school">
         <h2>Técnologo em Análise e Desenvolvimento de Sistemas</h2>
         <h3>UNICD Univercidade de São Paulo</h3>
+        <p>EAD</p>
         <p>Ano: 2022</p>
         <p>Situação: Trancado</p>
-      </div>
-      <div class="school">
-        <h2>Técnologo em Análise e Desenvolvimento de Sistemas</h2>
-        <h3>Cruzeiro do Sul Virtual</h3>
-        <p>Ano: 2023</p>
-        <p>Situação: Andamento</p>
       </div>
     </section>
     <section class="container-certificates">
