criada a pagina skills

--- a/pages/skills/skills.html
+++ b/pages/skills/skills.html
@@ -9,6 +9,18 @@
     <link rel="stylesheet" href="skills.css">
     <!-- Link javaScript -->
     <script src="../../main.js" defer></script>
+    <!-- Importação de fonte -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Importação de incones do boxicons -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
 </head>
 <body>
     <header class="navbar">
@@ -37,5 +49,66 @@
           <a href="../contact/contact.html" class="navigation-link">Contact</a>
         </nav>
     </header>
+    <main>
+      <section class="container-soft-skill">
+      <h2>Soft Skills</h2>
+      <div class="soft-skill">
+        <ul>
+          <li>Perseverança</li>
+          <li>Aceitar críticas</li>
+          <li>Adaptação</li>
+          <li>Trabalho em equipe</li>
+          <li>Relacionamento interpessoal</li>
+          <li>Organização</li>
+        </ul>
+      </div>
+      </section>
+      <section class="container-hard-skill">
+        <h2>Hard Skills</h2>
+        <div class="hard-skill">
+          <div class="icon-hard-skill">
+            <i class='bx bxl-html5 icon-hard'></i>
+            <p>HTML 5</p>
+          </div>
+          <div class="icon-hard-skill">
+            <i class='bx bxl-css3 icon-hard' ></i>
+            <p>CSS 3</p>
+          </div>
+          <div class="icon-hard-skill">
+            <i class='bx bxl-javascript icon-hard' ></i>
+            <p>javascript</p>
+          </div>
+          <div class="icon-hard-skill">
+            <i class='bx bxl-bootstrap icon-hard'></i>
+            <p>BOOTSTRAP</p>
+          </div>
+          <div class="icon-hard-skill">
+            <i class='bx bxl-sass icon-hard'></i>
+            <p>SASS</p>
+          </div>
+          <div class="icon-hard-skill">
+            <i class='bx bxl-nodejs icon-hard'></i>
+            <p>NODE JS</p>
+          </div>
+          <div class="icon-hard-skill">
+            <i class='bx bxl-react icon-hard'></i>
+            <p>REACT</p>
+          </div>
+          <div class="icon-hard-skill">
+            <i class='bx bxl-python icon-hard'></i>
+            <p>PYTHON</p>
+          </div>
+          <div class="icon-hard-skill">
+            <i class='bx bxl-git icon-hard'></i>
+            <p>GIT</p>
+          </div>
+          <div class="icon-hard-skill">
+            <i class='bx bxl-github icon-hard'></i>
+            <p>GITHUB</p>
+          </div>
+        </div>
+      </section>
+    </main>
+    
 </body>
 </html>
