--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Contact</title>
     <!-- Link do css -->
     <link rel="stylesheet" href="contact.css">
     <!-- Link javaScript -->
     <script src="../../main.js" defer></script>
+    <!-- Importação de fonte -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,400&display=swap"
+      rel="stylesheet"
+    />
 </head>
 <body>
     <header class="navbar">
