resolvido bugs e texto voltados todos para o padrao portugues

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Victor alves</title>
+    <title>Victor - Home</title>
     <!-- Estilo local -->
     <link rel="stylesheet" href="style.css" />
     <!-- Escript local -->
@@ -43,10 +43,10 @@
 
       <nav class="navbar-navigation response-active"">
         <a href="./index.html" class="navigation-link active">Home</a>
-        <a href="./pages/about/about.html" class="navigation-link">About</a>
+        <a href="./pages/about/about.html" class="navigation-link">Sobre</a>
         <a href="./pages/skills/skills.html" class="navigation-link">Skills</a>
-        <a href="./pages/project/project.html" class="navigation-link">Project</a>
-        <a href="./pages/contact/contact.html" class="navigation-link">Contact</a>
+        <a href="./pages/project/project.html" class="navigation-link">Projetos</a>
+        <a href="./pages/contact/contact.html" class="navigation-link">Contato</a>
       </nav>
     </header>
     <section class="home">
