--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
+    <title>Victor - Sobre</title>
     <!-- Link do css -->
     <link rel="stylesheet" href="about.css" />
     <!-- Link javaScript -->
@@ -44,15 +44,15 @@
 
       <nav class="navbar-navigation response-active">
         <a href="../../index.html" class="navigation-link">Home</a>
-        <a href="./about.html" class="navigation-link active">About</a>
+        <a href="./about.html" class="navigation-link active">Sobre</a>
         <a href="../skills/skills.html" class="navigation-link">Skills</a>
-        <a href="../project/project.html" class="navigation-link">Project</a>
-        <a href="../contact/contact.html" class="navigation-link">Contact</a>
+        <a href="../project/project.html" class="navigation-link">Projetos</a>
+        <a href="../contact/contact.html" class="navigation-link">Contato</a>
       </nav>
     </header>
     <section class="container-about">
       <div class="about-content">
-        <h2 class="title">About</h2>
+        <h2 class="title">Sobre</h2>
         <p>
           Olá, eu sou o Victor! Sou um cara de 23 anos que gosta muito de
           natureza, programação, café e fazer novos amigos. Não há nada como
@@ -92,7 +92,7 @@
       </div>
     </section>
     <section class="container-school">
-      <h2 class="title">Schools</h2>
+      <h2 class="title">Formação</h2>
       <div class="school">
         <h2>Técnico em Análise Clínicas</h2>
         <h3>CETEP Bacia do Jacúipe</h3>
@@ -108,7 +108,7 @@
       </div>
     </section>
     <section class="container-certificates">
-      <h2 class="title">Certificates</h2>
+      <h2 class="title">Certificados</h2>
       <div class="certificates"></div>
     </section>
   </body>
