--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Victor - Contato</title>
     <!-- Link do css -->
     <link rel="stylesheet" href="contact.css">
     <!-- Link javaScript -->
@@ -38,10 +38,10 @@
   
         <nav class="navbar-navigation response-active">
           <a href="../../index.html" class="navigation-link">Home</a>
-          <a href="../about/about.html" class="navigation-link">About</a>
+          <a href="../about/about.html" class="navigation-link">Sobre</a>
           <a href="../skills/skills.html" class="navigation-link">Skills</a>
-          <a href="../project/project.html" class="navigation-link">Project</a>
-          <a href="./contact.html" class="navigation-link active">Contact</a>
+          <a href="../project/project.html" class="navigation-link">Projetos</a>
+          <a href="./contact.html" class="navigation-link active">Contato</a>
         </nav>
     </header>
     <section class="container-form">
