--- a/pages/project/project.html
+++ b/pages/project/project.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
+    <title>Victor - Projetos</title>
     <!-- Link do css -->
     <link rel="stylesheet" href="project.css">
     <!-- Link javaScript -->
@@ -44,10 +44,10 @@
   
         <nav class="navbar-navigation response-active">
           <a href="../../index.html" class="navigation-link">Home</a>
-          <a href="../about/about.html" class="navigation-link ">About</a>
+          <a href="../about/about.html" class="navigation-link ">Sobre</a>
           <a href="../skills/skills.html" class="navigation-link">Skills</a>
-          <a href="./project.html" class="navigation-link active">Project</a>
-          <a href="../contact/contact.html" class="navigation-link">Contact</a>
+          <a href="./project.html" class="navigation-link active">Projetos</a>
+          <a href="../contact/contact.html" class="navigation-link">Contato</a>
         </nav>
     </header>
     <section class="container-projects">
@@ -55,8 +55,8 @@
         <p>Categorias</p>
         <div>
           <button class="btn-category active" id="all">All</button>
-          <button class="btn-category" id="my-project">My Project</button>
-          <button class="btn-category" id="course-project">Courses Project</button>
+          <button class="btn-category" id="my-project">Pessoal</button>
+          <button class="btn-category" id="course-project">Cursos</button>
         </div>
       </div>
 
