--- a/pages/skills/skills.html
+++ b/pages/skills/skills.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skills</title>
+    <title>Victor - Skills</title>
     <!-- Link do css -->
     <link rel="stylesheet" href="skills.css">
     <!-- Link javaScript -->
@@ -43,10 +43,10 @@
   
         <nav class="navbar-navigation response-active">
           <a href="../../index.html" class="navigation-link">Home</a>
-          <a href="../about/about.html" class="navigation-link ">About</a>
+          <a href="../about/about.html" class="navigation-link ">Sobre</a>
           <a href="./skills.html" class="navigation-link active">Skills</a>
-          <a href="../project/project.html" class="navigation-link">Project</a>
-          <a href="../contact/contact.html" class="navigation-link">Contact</a>
+          <a href="../project/project.html" class="navigation-link">Projetos</a>
+          <a href="../contact/contact.html" class="navigation-link">Contato</a>
         </nav>
     </header>
     <main>
