Alterado textos na parte de formação

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -96,15 +96,15 @@
       <div class="school">
         <h2>Técnico em Análise Clínicas</h2>
         <h3>CETEP Bacia do Jacúipe</h3>
-        <p>Ano: 2019</p>
+        <p>Ano Conclusão: 2019</p>
         <p>Situação: Concluido</p>
       </div>
       <div class="school">
         <h2>Técnologo em Análise e Desenvolvimento de Sistemas</h2>
         <h3>UNICD Univercidade de São Paulo</h3>
         <p>EAD</p>
-        <p>Ano: 2022</p>
-        <p>Situação: Trancado</p>
+        <p>Ano Conclusão: 2023</p>
+        <p>Situação: Cursando</p>
       </div>
     </section>
     <section class="container-certificates">
