Corrigidos erros de digitação

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -101,7 +101,7 @@
       </div>
       <div class="school">
         <h2>Técnologo em Análise e Desenvolvimento de Sistemas</h2>
-        <h3>UNICD Univercidade de São Paulo</h3>
+        <h3>UNICD Univercidade Cidade de São Paulo</h3>
         <p>EAD</p>
         <p>Ano Conclusão: 2023</p>
         <p>Situação: Cursando</p>
