corrigindo erro de ortografia

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h3>Front-end Developer</h3>
 
         <p>
-          Apaixonado pela programção, hoje tenho 23 anos, procuro dar meu melhor
+          Apaixonado pela programação, hoje tenho 24 anos, procuro dar meu melhor
           todos os dias, sendo grato pelas oportunidades de crescimento que a
           vida me proporciona.Com lema de vertir a camisa e fazer novos
           amigos.Viciado em café e apaixonado pelo meu pais nordeste.
