--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -54,7 +54,7 @@
       <div class="about-content">
         <h2 class="title">Sobre</h2>
         <p>
-          Olá, eu sou o Victor! Sou um cara de 23 anos que gosta muito de
+          Olá, eu sou o Victor! Sou um cara de 24 anos que gosta muito de
           natureza, programação, café e fazer novos amigos. Não há nada como
           estar ao ar livre e explorar a beleza do mundo natural. Adoro fazer
           caminhadas, acampar e simplesmente tomar sol no parque.
@@ -79,11 +79,10 @@
           mundo do que somos capazes.
         </p>
         <p>
-          Por último, mas não menos importante, sou um orgulhoso pai de
-          Pet. Meu amigo peludo é uma grande parte da minha vida e adoro
-          cuidar deles e passar o tempo juntos. Não há nada como o amor
-          incondicional e o companheirismo que um animal de estimação pode
-          oferecer.
+          Por último, mas não menos importante, sou um orgulhoso pai de Pet. Meu
+          amigo peludo é uma grande parte da minha vida e adoro cuidar deles e
+          passar o tempo juntos. Não há nada como o amor incondicional e o
+          companheirismo que um animal de estimação pode oferecer.
         </p>
         <p>
           No geral, sou apenas um cara amigável e extrovertido que adora
